tests/ui/union_intersection.stderr
error[E0432]: unresolved imports `range_set_blaze::intersection`, `range_set_blaze::union`
 --> tests/ui/union_intersection.rs:1:23
  |
1 | use range_set_blaze::{intersection, union};
  |                       ^^^^^^^^^^^^  ^^^^^ no `union` in the root
  |                       |
  |                       no `intersection` in the root
  |                       help: a similar name exists in the module: `intersection_dyn`
